# num

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASES.md  ROADMAP.md  SECURITY.md
language/crates/num-cli/: Cargo.toml
language/crates/num-cli/src/: bench.rs  compatibility.rs  connector_cli.rs  connector_sdk.rs  connector_sdk_cli.rs  demo.rs  deploy.rs  integrity.rs  main.rs  migration.rs  openapi.rs  package.rs  project.rs  registry.rs  registry_cli.rs  release_plan.rs  runtime_config.rs  sql_schema.rs  version_upgrade.rs  version_upgrade_cli.rs  workflow_cli.rs
language/crates/num-cli/tests/: compatibility_matrix.rs
language/crates/num-cli/tests/fixtures/benchmarks/generated_large/: num.toml
language/crates/num-cli/tests/fixtures/benchmarks/medium/: num.toml
language/crates/num-cli/tests/fixtures/deploy/: .gitlab-ci.yml  Jenkinsfile  github-actions.yml
language/crates/num-cli/tests/fixtures/migration/: source_rate_limit.after.num  source_rate_limit.before.num
language/crates/num-cli/tests/fixtures/openapi/: cursor_pagination.expected.num  cursor_pagination.json  customer_portal.expected.num  customer_portal.json  offset_pagination.expected.num  offset_pagination.json  oneof_union.expected.num  oneof_union.json  oneof_unsupported.expected.num  oneof_unsupported.json  runtime_client.expected.ts  runtime_client.json
language/crates/num-cli/tests/fixtures/sql_client/: customer_portal.sql
language/crates/num-cli/tests/fixtures/sql_migration/: additive_new.sql  additive_old.sql  breaking_new.sql  breaking_old.sql
(+188 files in other folders)
